fix: replace Arrays.asList by List.of